--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "extends": ["next/core-web-vitals", "next/typescript"],
+  // 💡 configuration only for workshop application
+  "rules": {
+    "@typescript-eslint/no-unused-vars": "off"
+  }
 }
