--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@highlight-run/next": "^7.5.31",
     "@hookform/resolvers": "^3.9.0",
+    "@opentelemetry/api": "^1.9.0",
+    "@vercel/otel": "^1.10.0",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
